--- a/src/components/card.list.component/card.list.css
+++ b/src/components/card.list.component/card.list.css
@@ -9,11 +9,44 @@
 }
 
 .card-list__header {
+  background: transparent;
+  border-radius: 3px;
+  box-shadow: none;
+  font-weight: 600;
+  height: 20px;
+  min-height: 20px;
+  padding: 4px 8px;
+  resize: none;
+  max-height: 256px;
+}
+
+.card-list__bottom {
+  align-items: baseline;
+}
+
+.card-list__header,
+.card-list__bottom {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
   padding: 10px;
+}
+
+.card-list__add-btn {
+  border-radius: 3px;
+  color: #5e6c84;
+  display: block;
+  flex: 1 0 auto;
+  position: relative;
+  text-decoration: none;
+  user-select: none;
+}
+
+.card-list__add-btn:hover {
+  background-color: rgba(9, 30, 66, 0.08);
+  color: #172b4d;
+  cursor: pointer;
 }
 
 .card-list__body {
@@ -25,4 +58,16 @@
   padding: 0 4px;
   z-index: 1;
   min-height: 0;
+}
+
+.card-list__inner {
+  color: rgb(23, 43, 77);
+  background-color: #ebecf0;
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  position: relative;
+  white-space: normal;
 }
