--- a/src/components/card.list.component/card.list.css
+++ b/src/components/card.list.component/card.list.css
@@ -8,21 +8,54 @@
   white-space: nowrap;
 }
 
-.card-list__header {
+.card-content {
+  background-color: #ebecf0;
+  border-radius: 3px;
+  box-sizing: border-box;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  padding: 10px;
+  flex-direction: column;
+  max-height: 100%;
+  position: relative;
+  white-space: normal;
 }
 
-.card-list__body {
-  flex: 1 1 auto;
-  margin-bottom: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  margin: 0 4px;
-  padding: 0 4px;
-  z-index: 1;
-  min-height: 0;
+.card-header {
+  flex: 0 0 auto;
+  padding: 10px 8px;
+  position: relative;
+  min-height: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.card-list__menu-btn {
+  border-radius: 3px;
+  color: #6b778c;
+  padding: 6px;
+  font-size: 16px;
+  line-height: 20px;
+  width: 20px;
+}
+
+.card-name {
+  background: transparent;
+  border-radius: 3px;
+  box-shadow: none;
+  font-weight: 600;
+  margin: -4px 0;
+  min-height: 20px;
+  padding: 4px 8px;
+  resize: none;
+  max-height: 256px;
+  width: 100%;
+  outline: none;
+  border: none;
+  transition-property: background-color, border-color, box-shadow;
+  transition-duration: 85ms;
+  transition-timing-function: ease;
+}
+
+.card-name:focus {
+  background-color: #fff;
+  box-shadow: inset 0 0 0 2px #0079bf;
 }
