--- a/src/components/footer.component/footer.css
+++ b/src/components/footer.component/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: rgba(201, 10, 14, 0.5);
+  background-color: hsla(0, 0%, 100%, 0.3);
   height: 100px;
   font-size: 1rem;
   font-weight: 900;
