--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('../../assets/fonts/Roboto-Regular.ttf') format('truetype');
+  src: url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
   /* src: url('./../assets/fonts/Roboto-Regular.ttf') format('truetype'); */
 }
 
@@ -24,13 +24,4 @@ ol {
   padding: 0;
   list-style: none;
   margin: 0;
-}
-
-.greet {
-  color: burlywood;
-  background-image: url(../../assets/img/rs_school_js.svg);
-  background-repeat: no-repeat;
-  background-position: left center;
-  font-size: 72px;
-  text-align: center;
 }
