--- a/src/components/card.list.component/card.list.css
+++ b/src/components/card.list.component/card.list.css
@@ -104,6 +104,7 @@
   transition-property: background-color, border-color, box-shadow;
   transition-duration: 85ms;
   transition-timing-function: ease;
+  cursor: pointer;
 }
 
 .card-name:focus {
@@ -121,4 +122,21 @@
   max-height: 100%;
   position: relative;
   white-space: normal;
+}
+
+.black-back {
+  opacity: 0.02;
+}
+
+.rotate {
+  animation: rotating 0.5s linear 1 forwards;
+}
+
+@keyframes rotating {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(20deg);
+  }
 }
