--- a/src/components/footer.component/footer.css
+++ b/src/components/footer.component/footer.css
@@ -3,7 +3,7 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: hsla(0, 0%, 100%, 0.3);
-  height: 100px;
+  height: 70px;
   font-size: 1rem;
   font-weight: 900;
   margin-top: 25px;
@@ -19,13 +19,7 @@
   margin: 0px auto;
 }
 
-.github_logo {
-  height: 35px;
-  width: 35px;
-  margin: 5px auto;
-}
-
-.github_info {
+.footer_info {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -47,10 +41,11 @@
 }
 
 .rs_link {
-  margin: 0px auto;
+  margin: 5px auto;
+  display: flex;
 }
 
-.rs_image {
-  height: 50px;
-  width: 50px;
+.rs_logo {
+  height: 30px;
+  width: 60px;
 }
