--- a/src/components/card.component/card.module.css
+++ b/src/components/card.component/card.module.css
@@ -21,7 +21,7 @@
 }
 
 .popup__list-text {
-  padding-left: 9px;
+  padding: 9px;
 }
 
 .popup__card-name {
@@ -37,18 +37,28 @@
   font-size: 16px;
 }
 
-.popup__fake-description {
-  display: block;
-  min-height: 45px;
-  padding: 8px 12px;
+.popup__textarea-description {
+  width: 100%;
+  resize: none;
 
-  color: #172b4d;
-  background-color: rgba(39, 81, 155, 0.08);
+  background-color: rgba(9, 30, 66, 0.04);
+  box-shadow: none;
+  border: none;
   border-radius: 3px;
+  display: block;
+  min-height: 60px;
+  padding: 8px 12px;
   text-decoration: none;
+  cursor: pointer;
 }
 
-.popup__fake-description:active {
+.popup__textarea-description:focus {
+  background-color: #fff;
+  box-shadow: inset 0 0 0 2px #0079bf;
+  outline: 0;
+}
+
+.popup__textarea-description:active {
   background-color: #e4f0f6;
   color: #0079bf;
   outline: 0;
