--- a/src/components/listMenu.component/listMenu.module.css
+++ b/src/components/listMenu.component/listMenu.module.css
@@ -14,7 +14,6 @@
 .menu-header {
   height: 40px;
   position: relative;
-  margin-bottom: 8px;
   text-align: center;
   font-size: 1.2rem;
 }
@@ -22,9 +21,9 @@
 .menu-body {
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 0 12px 12px;
+  padding: 12px;
+  border-top: 1px solid rgba(9, 30, 66, 0.13);
   max-height: 609px;
-  font-size: 1.7rem;
   color: #5e6c84;
 }
 
@@ -58,7 +57,6 @@
   color: #5e6c84;
   display: block;
   line-height: 40px;
-  border-bottom: 1px solid rgba(9, 30, 66, 0.13);
   margin: 0 12px;
   overflow: hidden;
   padding: 0 32px;
@@ -66,4 +64,24 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   z-index: 10;
+}
+
+.add-list-btn-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 8px;
+}
+
+.select {
+  width: 50px;
+  margin-left: 10px;
+}
+
+.select-block {
+  display: flex;
+  flex-direction: row;
+}
+
+.select-label {
+  line-height: 20px;
 }
