--- a/src/components/user.kit.component/addCloseBtn.module.css
+++ b/src/components/user.kit.component/addCloseBtn.module.css
@@ -8,6 +8,13 @@
   color: #fff;
   height: 32px;
   border-radius: 3px;
+}
+
+.add-button:hover {
+  background-color: #61bd4f;
+  box-shadow: none;
+  border: none;
+  color: #fff;
   cursor: pointer;
 }
 
