--- a/client/src/components/card.component/card.module.css
+++ b/client/src/components/card.component/card.module.css
@@ -30,7 +30,22 @@
 }
 
 .popup__description-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.popup__sidebar {
+  padding: 0 16px 8px 8px;
+  width: 168px;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.popup__description-inner {
   padding: 5px;
+  flex-grow: 1;
+  min-width: 300px;
 }
 
 .popup__description {
@@ -44,6 +59,7 @@
   padding: 8px 12px;
   margin: 5px 0;
   min-height: 60px;
+  max-height: 300px;
 
   background-color: rgba(9, 30, 66, 0.04);
   box-shadow: none;
