--- a/client/src/components/card.component/card.module.css
+++ b/client/src/components/card.component/card.module.css
@@ -86,3 +86,22 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.popup__close-button {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+
+  width: 40px;
+  height: 40px;
+  padding-top: 3px;
+  padding-left: 11px;
+  z-index: 20;
+}
+
+.popup__close-button:hover {
+  background-color: rgba(9, 30, 66, 0.08);
+  color: #42526e;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
