--- a/client/src/components/card.component/card.module.css
+++ b/client/src/components/card.component/card.module.css
@@ -1,9 +1,17 @@
 .card {
   color: #172b4d;
+}
+
+.card__text {
+  position: relative;
+  padding: 6px 8px 2px;
+  margin-bottom: 8px;
+
   background-color: #fff;
   border-radius: 3px;
   box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
+
   cursor: pointer;
-  margin-bottom: 8px;
-  cursor: pointer;
+  overflow: hidden;
+  z-index: 10;
 }
