feat: fetch board data + add board menu in header

--- a/client/src/components/app.component/app.module.css
+++ b/client/src/components/app.component/app.module.css
@@ -6,3 +6,13 @@
   font-size: 72px;
   text-align: center;
 }
+
+.main {
+  position: relative;
+  overflow-y: auto;
+  outline: none;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  height: calc(100vh - 200px);
+}
