--- a/src/components/main.component/main.module.css
+++ b/src/components/main.component/main.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 110px);
 }
 
 .main-inner {
