--- a/client/src/components/popup.component/popup.module.css
+++ b/client/src/components/popup.component/popup.module.css
@@ -1,17 +1,3 @@
-.popup {
-  min-height: 300px;
-  max-width: 768px;
-  margin: 48px auto 80px;
-  padding: 20px;
-
-  background-color: #f4f5f7;
-  border-radius: 2px;
-  overflow: hidden;
-  position: relative;
-  z-index: 25;
-  color: #172b4d;
-}
-
 .popup__body {
   font-size: 14px;
 }
@@ -41,18 +27,10 @@
   justify-content: space-between;
 }
 
-.popup__sidebar {
-  padding: 0 16px 8px 8px;
-  width: 168px;
-  overflow: hidden;
-  z-index: 10;
-  color: #5e6c84;
-}
-
 .popup__description-inner {
   padding: 5px;
   flex-grow: 1;
-  min-width: 300px;
+  min-width: 200px;
 }
 
 .popup__description {
@@ -109,6 +87,7 @@
   color: #42526e;
   line-height: 32px;
   font-size: 37px;
+  font-weight: 500;
   margin-left: 10px;
 }
 
@@ -120,8 +99,14 @@
   cursor: pointer;
 }
 
+.popup__sidebar {
+  margin: 0 16px 0 8px;
+  width: 192px;
+  z-index: 10;
+  color: #5e6c84;
+}
+
 .popup__sidebar-button {
-  position: relative;
   margin-top: 8px;
   padding: 6px 12px;
   height: 32px;
@@ -161,4 +146,25 @@
 .sidebar__title {
   margin-bottom: 4px;
   text-transform: uppercase;
+}
+
+.sidebar__wrapper {
+  position: relative;
+}
+
+.sidebar__popup {
+  top: 48px;
+  left: 0;
+  margin-top: 5px;
+  width: 183px;
+
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25),
+    0 0 0 1px rgba(9, 30, 66, 0.08);
+  z-index: 30;
+}
+
+.checklist-wrapper {
+  width: 100%;
 }
