--- a/client/src/components/boardHeader.component/boardHeader.module.css
+++ b/client/src/components/boardHeader.component/boardHeader.module.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: flex;
   justify-content: flex-start;
-  background-color: rgba(0, 0, 0, 0.24);
+  background-color: transparent;
   min-height: 40px;
   max-height: 40px;
   padding: 4px;
