--- a/client/src/components/footer.component/footer.module.css
+++ b/client/src/components/footer.component/footer.module.css
@@ -3,16 +3,14 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: hsla(0, 0%, 100%, 0.3);
-  height: 70px;
+  height: 30px;
   font-size: 1rem;
   font-weight: 900;
 }
 
 .footer_container {
-  display: flex;
   align-items: center;
   width: 1280px;
-  justify-content: space-evenly;
   flex-wrap: wrap;
   padding: 0px 10px;
   margin: 0px auto;
@@ -20,7 +18,7 @@
 
 .footer_info {
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   margin: 0 auto;
 }
 
@@ -46,7 +44,7 @@
 }
 
 .rs_link {
-  margin: 5px auto;
+  margin: 0 5px;
   display: flex;
 }
 
