--- a/client/src/components/footer.component/footer.module.css
+++ b/client/src/components/footer.component/footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: hsla(0, 0%, 100%, 0.3);
+  background-color: rgba(2, 106, 167, 0.7);
   height: 30px;
   font-size: 1rem;
   font-weight: 900;
@@ -32,12 +32,12 @@
 .year {
   display: flex;
   justify-content: center;
-  color: #000000;
+  color: #ffffff;
 }
 
 .github_link {
   text-decoration: none;
-  color: #000000;
+  color: #ffffff;
   align-items: center;
   text-align: center;
   padding: 0 5px;
