--- a/client/src/components/header.component/header.module.css
+++ b/client/src/components/header.component/header.module.css
@@ -48,7 +48,7 @@
   font-weight: 700;
   line-height: 32px;
   margin: 0 4px 0 0;
-  padding: 5px;
+  padding: 0;
   white-space: nowrap;
   height: 32px;
   width: 32px;
