--- a/client/src/global.css
+++ b/client/src/global.css
@@ -8,7 +8,7 @@
 html {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  background-color: rgb(43, 45, 46);
+  background-color: rgba(2, 106, 167, 0.7);
   color: #ffffff;
 }
 
