--- a/client/src/components/header.component/header.module.css
+++ b/client/src/components/header.component/header.module.css
@@ -15,12 +15,7 @@
   width: 33%;
 }
 
-.menu__icon,
-.home__icon,
-.trello__icon,
-.search__icon,
-.create__icon,
-.notification__icon {
+.trello__icon {
   display: inline-block;
   fill: currentColor;
   flex-shrink: 0;
@@ -32,10 +27,8 @@
   justify-content: flex-end;
   width: 33%;
 }
-.button__burger,
-.button__home,
-.button__boards,
-.button__search {
+
+.button__boards {
   border-radius: 3px;
   border: 0;
   text-decoration: none;
@@ -44,31 +37,17 @@
   box-shadow: none;
   color: #fff;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   font-weight: 700;
   line-height: 32px;
   margin: 0 4px 0 0;
   padding: 0;
   white-space: nowrap;
   height: 32px;
-  width: 32px;
-}
-
-.button__boards {
   width: 90px;
-  justify-content: space-evenly;
-}
-.button__search {
-  width: 182px;
-  justify-content: flex-end;
 }
 
-.button__burger:hover,
-.button__home:hover,
 .button__boards:hover,
-.button__search:hover,
-.button__create:hover,
-.button__notifications:hover,
 .button__profile:hover {
   background-color: hsla(0, 0%, 100%, 0.2);
   cursor: pointer;
@@ -81,16 +60,7 @@
   height: 30px;
   margin-top: 1px;
 }
-.header__loading_logo {
-  background-image: url(../../assets/img/header-loading-logo.d73159084f5122775d4d.gif);
-  background-size: 80px 30px;
-  opacity: 0;
-  display: inline-block;
-  height: 18px;
-  position: absolute;
-  top: 6px;
-  width: 18px;
-}
+
 .header__img {
   background-image: url(../../assets/img/header-logo-2x.01ef898811a879595cea.png);
   background-position: 100% 0;
@@ -102,26 +72,7 @@
   height: 30px;
   width: 80px;
 }
-.button__create,
-.button__notifications {
-  border-radius: 3px;
-  border: 0;
-  text-decoration: none;
-  align-items: center;
-  background-color: hsla(0, 0%, 100%, 0.3);
-  box-shadow: none;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  font-weight: 700;
-  height: 32px;
-  line-height: 32px;
-  margin: 0 4px 0 0;
-  padding: 0;
-  white-space: nowrap;
-  height: 32px;
-  width: 32px;
-}
+
 .button__profile {
   align-items: center;
   background-color: #0354ca;
