--- a/client/src/components/checklist.component/checklist.module.css
+++ b/client/src/components/checklist.component/checklist.module.css
@@ -304,5 +304,8 @@
 }
 
 .checkbox__delete:hover {
+  background-color: rgba(9, 30, 66, 0.08);
+  box-shadow: none;
+  border: none;
   cursor: pointer;
 }
