--- a/client/src/components/header.boardsMenu.component/header.boardsMenu.module.css
+++ b/client/src/components/header.boardsMenu.component/header.boardsMenu.module.css
@@ -5,7 +5,7 @@
   max-height: calc(100% - 48px);
   box-shadow: 0 12px 24px -6px rgb(9 30 66 / 25%), 0 0 0 1px rgb(9 30 66 / 8%);
   border-radius: 3px;
-  background-color: #fff;
+  background-color: #ebecf0;
   overflow: hidden;
   display: flex;
   flex-direction: row;
@@ -36,6 +36,12 @@
   margin: 5px;
   color: #5e6c84;
   cursor: pointer;
+  font-size: 1.2rem;
+  padding: 6px 8px 2px;
+  margin-bottom: 8px;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
 }
 
 .add-board {
@@ -56,4 +62,10 @@
 .input-form {
   color: #5e6c84;
   margin-top: 4px;
+}
+
+.menu-header-text {
+  font-size: 1.2rem;
+  margin-left: 10px;
+  color: #172b4d;
 }
